Add Food Images and Webpages and Edit Grammar
Completed
I added the "Cherry Pie" and "Chicken" images
Added the corresponding Webpages
Fixed ReadMe grammar
Added the links to index homepage

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -42,8 +42,12 @@
 
      <ol>
         <li>Prepare the noodles</li>
-
-
+        <li>Cook the meat</li>
+        <li>Prepare the ricotta filling</li>
+        <li>Assemble the lasagna</li>
+        <li>Bake the lasagna</li>
+        <li>Let it rest</li>
+        <li>Serve and Enjoy!</li>
 
      </ol>
 
