--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/chicken.html"><p>Fried Chicken</p></a></li>
+        <li><a href="./recipes/pie.html">Cherry Pie</a></li>
+        
 
+
+    </ul>
 
     
 </body>
