--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/chicken.html"><p>Fried Chicken</p></a></li>
-        <li><a href="./recipes/pie.html">Cherry Pie</a></li>
+        <li class="links"><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li class="links"><a href="./recipes/chicken.html"><p>Fried Chicken</p></a></li>
+        <li class="links"><a href="./recipes/pie.html">Cherry Pie</a></li>
         
-
-
     </ul>
 
-    
 </body>
 </html>
