--- a/recipes/pie.html
+++ b/recipes/pie.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cherry Pie</title>
+    <link rel="stylesheet" href="recipe.css">
+
 </head>
 <body>
     <h1>Cherry Pie</h1>
